--- a/file_list.html
+++ b/file_list.html
@@ -46,7 +46,7 @@
       <ul id="full_list" class="file">
         
 
-  <li class="r1"><a href="file.Overview.html" title="Architecture Overview">Architecture Overview</a></li>
+  <li class="r1"><a href="index.html" title="Architecture Overview">Architecture Overview</a></li>
   
 
       </ul>
